err/persist-wrapper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/date_data_cache'...
Compiling './lib/python3.5/site-packages/date_data_cache/cache.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/cache.py", line 66
    print "Popping", key, link[3]
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/date_data_cache/cached_requests.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/cached_requests.py", line 72
    print "skipping 429"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/date_data_cache/compress.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/compress.py", line 7
    print "doing", k
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/date_data_cache/decorators.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/decorators.py", line 118
    print '%r %2.2f msec' % \
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/date_data_cache/generic_data.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/generic_data.py", line 24
    print sql
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/date_data_cache/persist_dict.py'...
***   File "./lib/python3.5/site-packages/date_data_cache/persist_dict.py", line 80
    print "Trying to open", self.dbpath
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/persist_wrapper-0.0.60.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
